tests/NormalTests/paczka1/small_fuzzy/75770097.err
Error in line 1: YkmZZRwM A442 37,51
Error in line 8: OpL4 S613 22,1
